# analytics

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt  run.py
analysis/: ab_test.py  simulate.py
dashboard/: Home.py  data.py
dashboard/pages/: 1_Player_Explorer.py  2_Leaderboards.py  3_AB_Experiment.py
notebooks/: eda.ipynb
pipeline/: ingest.py  metrics.py  transform.py
