[project]
name = "sleeper-analytics"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.4.4",
    "jupyterlab>=4.5.4",
    "nfl-data-py>=0.3.3",
    "pandas>=1.5.3",
    "plotly>=6.5.2",
    "pyarrow>=23.0.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "streamlit>=1.54.0",
]
